crates/ars-forms/src/fieldset/snapshots/ars_forms__fieldset__component__tests__fieldset_description_default.snap
---
source: crates/ars-forms/src/fieldset/component.rs
expression: "snapshot_attrs(service.connect(&|_| {}).description_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "fieldset",
            ),
        ),
        (
            Id,
            String(
                "billing-description",
            ),
        ),
    ],
    styles: [],
}
