crates/ars-forms/src/fieldset/snapshots/ars_forms__fieldset__component__tests__fieldset_root_disabled.snap
---
source: crates/ars-forms/src/fieldset/component.rs
expression: "snapshot_attrs(service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "fieldset",
            ),
        ),
        (
            Id,
            String(
                "billing",
            ),
        ),
        (
            Disabled,
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
