crates/ars-forms/src/fieldset/snapshots/ars_forms__fieldset__component__tests__fieldset_root_rtl.snap
---
source: crates/ars-forms/src/fieldset/component.rs
expression: "snapshot_attrs(service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "fieldset",
            ),
        ),
        (
            Dir,
            String(
                "rtl",
            ),
        ),
        (
            Id,
            String(
                "billing",
            ),
        ),
    ],
    styles: [],
}
